# Faraway_game

./: .gitignore  README.md  pyproject.toml
data/: cards.json  sanctuary_scan_map.json
src/faraway/: __init__.py  cli.py
src/faraway/domain/: __init__.py  cards.py  game.py  scoring.py
src/faraway/web/: __init__.py  app.py
src/faraway/web/static/: app.js  styles.css
src/faraway/web/templates/: index.html
tests/: test_game.py
